[tool.poetry]
name = "Tao"
version = "0.1.3"
description = ""
authors = ["amulil <amulil@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
tensorboard = "^2.10.0"
wandb = "^0.13.6"
gym = "0.23.1"
torch = ">=1.12.1"
stable-baselines3 = "1.2.0"
gymnasium = "^0.26.3"
moviepy = "^1.0.3"
pygame = "2.1.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
