[tool.poetry]
name = "Tao"
version = "0.1.4"
description = ""
authors = ["amulil <amulil@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
tensorboard = "^2.10.0"
wandb = "^0.13.6"
gym = "0.23.1"
torch = ">=1.12.1"
stable-baselines3 = "1.2.0"
gymnasium = "^0.26.3"
moviepy = "^1.0.3"
pygame = "2.1.0"
jupyter = "^1.0.0"
huggingface-hub = "^0.11.1"
ale-py = "0.7.4"
AutoROM = {extras = ["accept-rom-license"], version = "^0.4.2"}
opencv-python = "^4.6.0.66"
pybullet = "3.1.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
atari = ["ale-py", "AutoROM", "opencv-python"]
pybullet = ["pybullet"]
